apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_nested_paths_in_url_template_variables.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_nested_paths_in_url_template_variables.graphql
---
[
    Message {
        code: UndefinedField,
        message: "`GET` in `@connect(http:)` on `Query.scalar` contains an invalid variable reference `{$args.scalar.blah}` - `String` does not have a field named `blah`.",
        locations: [
            10:62..10:66,
        ],
    },
    Message {
        code: UndefinedField,
        message: "`GET` in `@connect(http:)` on `Query.object` contains an invalid variable reference `{$args.input.fieldThatDoesntExist}` - `InputObject` does not have a field named `fieldThatDoesntExist`.",
        locations: [
            15:61..15:81,
        ],
    },
    Message {
        code: UndefinedField,
        message: "`GET` in `@connect(http:)` on `Query.enum` contains an invalid variable reference `{$args.enum.cantHaveFields}` - `Enum` does not have a field named `cantHaveFields`.",
        locations: [
            20:58..20:72,
        ],
    },
    Message {
        code: UndefinedField,
        message: "`GET` in `@connect(http:)` on `Object.newField` contains an invalid variable reference `{$this.fieldThatDoesntExist}` - `Object` does not have a field named `fieldThatDoesntExist`",
        locations: [
            29:55..29:75,
        ],
    },
]
