apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_selection_arrow_method_arity.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_selection_arrow_method_arity.graphql
---
[
    Message {
        code: IncorrectArity,
        message: "`@connect(selection:)` on `Query.me` calls method `size` with the wrong number of arguments - expected 0, found 1",
        locations: [
            13:27..13:31,
        ],
    },
    Message {
        code: UnresolvedField,
        message: "No connector resolves field `User.id`. It must have a `@connect` directive or appear in `@connect(selection:)`.",
        locations: [
            19:5..19:12,
        ],
    },
    Message {
        code: UnresolvedField,
        message: "No connector resolves field `User.invalid`. It must have a `@connect` directive or appear in `@connect(selection:)`.",
        locations: [
            20:5..20:20,
        ],
    },
]
