apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_source_http_headers.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_source_http_headers.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` either `from` or `value` must be set",
        locations: [
            13:9..13:37,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` missing `name` field",
        locations: [
            14:9..14:35,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` `from` and `value` can't be set at the same time",
        locations: [
            15:35..15:39,
            15:59..15:64,
        ],
    },
    Message {
        code: HttpHeaderNameCollision,
        message: "Duplicate header names are not allowed. The header name 'x-name-collision' at `@source(http.headers:)` is already defined.",
        locations: [
            17:17..17:35,
            16:17..16:35,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` the value `<Invalid-Header>` is an invalid HTTP header name",
        locations: [
            18:17..18:35,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` the value `<Invalid-Header>` is an invalid HTTP header name",
        locations: [
            19:41..19:59,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` invalid value `  Value with 😊 emoji and newline  \n `",
        locations: [
            22:19..22:58,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` header 'content-length' is reserved and cannot be set by a connector",
        locations: [
            24:17..24:33,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` header 'content-type' can't be set with `from`, only with `value`",
        locations: [
            25:17..25:31,
        ],
    },
]
