apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_source_url.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_source_url.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "The value \"127.0.0.1\" for `@source(baseURL:)` is not a valid URL: relative URL without a base.",
        locations: [
            LineColumn {
                line: 6,
                column: 31,
            }..LineColumn {
                line: 6,
                column: 51,
            },
        ],
    },
]
