apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_source_url_scheme.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_source_url_scheme.graphql
---
[
    Message {
        code: SourceScheme,
        message: "The value \"file://data.json\" for `@source(baseURL:)` must be http or https, got file.",
        locations: [
            LineColumn {
                line: 6,
                column: 31,
            }..LineColumn {
                line: 6,
                column: 58,
            },
        ],
    },
]
