apollo-federation/src/sources/connect/validation/snapshots/validation_tests@missing_http_method_on_connect.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/validation/missing_http_method_on_connect.graphql
---
[Message { code: MissingHttpMethod, message: "`@connect(http:)` on `Query.resources` must specify an HTTP method.", locations: [Location { line: 8, column: 53 }..Location { line: 8, column: 55 }] }]
